// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with an invalid default value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with an unknown default value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with comma in option label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated option ids 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated option positions 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated option values 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated trimmed option values 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with empty multi-select default values array 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with empty options 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string id 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with invalid multi-select default value format 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with invalid option id 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with invalid option value format 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with non stringified array default value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string id 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "BUILDER_INTERNAL_SERVER_ERROR",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with null id 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with null label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "BUILDER_INTERNAL_SERVER_ERROR",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with null options 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with null value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "BUILDER_INTERNAL_SERVER_ERROR",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces id 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with too long defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with too long id 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with too long label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with too long value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with undefined option label 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "BUILDER_INTERNAL_SERVER_ERROR",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with undefined option value 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "BUILDER_INTERNAL_SERVER_ERROR",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with undefined options 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata MULTI_SELECT tests suite v2 Create should fail with unknown multi-select default values 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;

exports[`Create field metadata SELECT tests suite v2 Create should fail with invalid option id 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Multiple validation errors occurred while creating fields",
  },
]
`;
